<resources>
    <string name="app_name">Roots</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">625155307432-kjtq911qaladhrksfp5p3k8ks8kgo6mv.apps.googleusercontent.com</string>
    <string name="matches">Matches</string>
    <string name="buddies">Buddies</string>
    <string name="friends">Friends</string>
    <string name="login">Login</string>
    <string name="welcome_home">Hello from Home Page</string>
    <string name="home_screen_fragment">Home</string>
    <string name="createEvent_nav">Create Event</string>
    <string name="eventListing_nav">Event Listing</string>
    <string name="profileButton_nav">Profile</string>
    <string name="buddiesButton_nav">Buddies</string>
    <string name="loginButton_nav">Login</string>
    <string name="listingDetails">This will hold info on each event</string>
    <string name="category_title_txt">Categories</string>
    <string name="your_events_list">Your Events</string>
    <!-- Added content descriptions to avoid resource errors -->
    <string name="event_listing_desc">Event Listing</string>
    <string name="my_event_desc">My Event Card</string>
    <!-- For navigation bundles -->
    <string name="user_argument_key">aUser</string>
    <string name="buds">Buds</string>
    <string name="blossoms">Blossoms</string>
    <string name="requests">Requests</string>
</resources>